--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tech9o</title>
+    <title>Open your mind before your mouth~</title>
     <style>
         body {
             margin: 0;
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <div>tech9o</div>
+    <div>Open your mind before your mouth~</div>
 </body>
 </html>
