--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open your mind before your mouth~</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            font-size: 36px;
-        }
-    </style>
+
+   <meta charset="utf-8">
+	<title>Stige</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+   <link rel="stylesheet" href="css/base.css">
+   <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-    <div>Open your mind before your mouth~</div>
-</body>
-</html>
+
+<body id="top">
+
+   <section id="intro">
+
+   	<div class="intro-overlay"></div>
+
+   	<div class="intro-content">
+   		<div class="row">
+
+   			<div class="col-twelve">
+
+	   			<h5>Ayoo</h5>
+	   			<h1>tech9o</h1>
+          <h5>this side!</h5>
+<br>
+<br>
+
+	   		</div>
+
+   		</div>
+   	</div>
+
