--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
    <meta charset="utf-8">
-	<title>Stige</title>
+	<title>@tech9o</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
