--- a/index.html
+++ b/index.html
@@ -1,39 +1,13 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
-<head>
-
-   <meta charset="utf-8">
-	<title>@tech9o</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-   <link rel="stylesheet" href="css/base.css">
-   <link rel="stylesheet" href="css/main.css">
-</head>
-
-	
-<body id="top">
-
-   <section id="intro">
-
-   	<div class="intro-overlay"></div>
-
-   	<div class="intro-content">
-   		<div class="row">
-
-   			<div class="col-twelve">
-
-	   			<h5>Ayoo</h5>
-	   			<h1>tech9o</h1>
-          <h5>this side!</h5>
-<br>
-<br>
-
-	   		</div>
-
-   		</div>
-   	</div>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@tech9o</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
